# supernova

./: .envrc  Cargo.toml  shell.nix
assets/segments/: tube_small.ron
src/: constants.rs  consts.rs  csg.rs  error.rs  main.rs  propellant.rs  supernova.rs  types.rs
src/application/: event.rs  loading_screen.rs
src/construct/: mod.rs
src/csg/: bin_op.rs  flat.rs  mod.rs  node.rs  opcodes.rs  ops.rs  primitive.rs  repr.rs  tree.rs  types.rs  unary_op.rs
src/propellant/: application.rs  assets.rs  components.rs  event.rs  host.rs  renderer.rs  scene.rs  vulkan.rs
src/propellant/assets/: collection.rs  handle.rs  manager.rs  segment.rs
src/propellant/components/: camera.rs  segment_renderer.rs  transform.rs
src/propellant/renderer/: error.rs  render_pass.rs  shaders.rs  texture.rs  uniform_buffer.rs  uniforms.rs
src/propellant/renderer/render_pass/: color_pass.rs  geometry_pass.rs  mod.rs  post_processing_pass.rs
src/propellant/renderer/shaders/: example.frag.glsl  example.vert.glsl
src/propellant/renderer/uniforms/: camera.rs  segment.rs
src/propellant/scene/: system.rs
src/propellant/vulkan/: buffer.rs  command_interface.rs  device.rs  helper_functions.rs  instance.rs  physical_devices.rs  queue.rs  queue_family_indices.rs  reference.rs  swapchain.rs  swapchain_support.rs  synchronization.rs  utils.rs  vulkan_interface.rs  vulkan_state.rs
src/propellant/vulkan/buffer/: error.rs  (+4 more)
src/vulkan/: helper_functions.rs  mod.rs  physical_devices.rs  queue_family_indices.rs  swapchain.rs  swapchain_support.rs  utils.rs  vulkan_interface.rs  vulkan_state.rs
(+3 files in other folders)
